--- a/slide-products.html
+++ b/slide-products.html
@@ -31,7 +31,7 @@
             align-items: center;
             text-align: center;
             height: 100vh;
-            padding: 20px;
+            padding: 0px;
             background-size: cover;
             background-position: center;
             /* background-size: 1600px !important; */
@@ -52,7 +52,7 @@
         }
 
         .product-card p {
-            font-size: 16px;
+            font-size: 1.2rem;
             margin: 0;
             bottom: 40px;
             position: fixed;
@@ -64,7 +64,7 @@
 
         .product-card span {
             text-transform: uppercase; 
-            font-size: 32px;
+            font-size: 3rem;
             /* background: #00000099; */
             /* height: 30px; */
             display: block;
@@ -76,10 +76,11 @@
             padding: 5px 10px;
             color: #555555;
             position: absolute;
-            top: 75px;
+            top: 54px;
             border-left: 2px solid #000;
             float: right;
-            font-weight: bold;
+            font-weight: normal;
+            ;
         }
 
         .highlight {
@@ -99,8 +100,8 @@
     top: 50%;
     left: -2px;
     content: '';
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     color: transparent;
     border-radius: 0 40px 40px 0;
     border: 0 none;
@@ -113,10 +114,10 @@
     top: 50%;
     right: -2px;
     content: '';
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     color: transparent;
-    border-radius: 40px 0 0 40px;
+    border-radius: 30px 0 0 30px;
     border: 0 none;
     background: #0000007d;
         }
@@ -136,7 +137,7 @@
         .filter {
             background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;
             height: 100vh;
-            margin: -20px;
+            margin: 0px;
         }
     </style>
 </head>
@@ -152,10 +153,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script>
         $(document).ready(function () {
-            $.getJSON('lifetree-data.json', function (data) {
+            $.getJSON('data.json', function (data) {
                 var productCards = '';
                 $.each(data, function (index, product) {
-                    var productCard = '<div lazy class="product-card" style="background-image: url(' + product.contentImage + ');">';
+                    var productCard = '<div lazy class="product-card" style="background-image: url(' + product.coverImage + ');">';
                     productCard += '<div class="filter"><h3>' + product.Title + '</h3>';
                     productCard += '<p>' + product.Location + '</p>';
                     productCard += '<span>' + product.Price + '</span>';
