--- a/slide-products.html
+++ b/slide-products.html
@@ -42,24 +42,33 @@
         .product-card h3 {
             position: absolute;
     font-size: 24px;
-    top: 120px;
+    /* top: 120px; */
     margin: 0;
     border-left: 2px solid #000;
     background-color: #ffffffb5;
     padding: 5px 10px;
-    color: #555555;
-    font-weight: normal;
+    color: #3e3e3e;
+    font-weight: 400;
+    /* text-transform: uppercase; */
+    font-size: 1.2rem;
+    margin: 0;
+    bottom: 0px;
+    position: fixed;
+    /* border-left: 4px solid #555555; */
+    background-color: #000;
+    padding: 5px 10px;
+    color: #fff;
         }
 
         .product-card p {
             font-size: 1.2rem;
-            margin: 0;
-            bottom: 40px;
-            position: fixed;
-            /* border-left: 4px solid #555555; */
-            background-color: #000;
-            padding: 5px 10px;
-            color: #fff;
+    margin: 0;
+    top: 121px;
+    position: fixed;
+    /* border-left: 4px solid #555555; */
+    background-color: #000;
+    padding: 5px 10px;
+    color: #fff;
         }
 
         .product-card span {
@@ -156,7 +165,7 @@
             $.getJSON('data.json', function (data) {
                 var productCards = '';
                 $.each(data, function (index, product) {
-                    var productCard = '<div lazy class="product-card" style="background-image: url(' + product.coverImage + ');">';
+                    var productCard = '<div lazy class="product-card" style="background-image: url(' + product.contentImage + ');">';
                     productCard += '<div class="filter"><h3>' + product.Title + '</h3>';
                     productCard += '<p>' + product.Location + '</p>';
                     productCard += '<span>' + product.Price + '</span>';
