--- a/slide-products.html
+++ b/slide-products.html
@@ -11,6 +11,7 @@
     <style>
         * {
             font-family: 'Work Sans', sans-serif;
+            -webkit-tap-highlight-color: transparent;
             cursor: pointer;
         }
         body {
@@ -41,55 +42,55 @@
 
         .product-card h3 {
             position: absolute;
-    font-size: 24px;
-    /* top: 120px; */
-    margin: 0;
-    border-left: 2px solid #000;
-    background-color: #ffffffb5;
-    padding: 5px 10px;
-    color: #3e3e3e;
-    font-weight: 400;
-    /* text-transform: uppercase; */
-    font-size: 1.2rem;
-    margin: 0;
-    bottom: 0px;
-    position: fixed;
-    /* border-left: 4px solid #555555; */
-    background-color: #000;
-    padding: 5px 10px;
-    color: #fff;
+            font-size: 24px;
+            top: 120px;
+            margin: 0;
+            /* border-left: 2px solid #000; */
+            background-color: #ffffffb5;
+            padding: 5px 10px;
+            color: #3e3e3e;
+            font-weight: 300;
+            text-transform: capitalize;
+            margin: 0;
+            top: 20px;
+            position: fixed;
+            /* border-left: 4px solid #555555; */
+            background-color: #000000bf;
+            padding: 5px 10px;
+            color: #fff;
         }
 
         .product-card p {
             font-size: 1.2rem;
-    margin: 0;
-    top: 121px;
-    position: fixed;
-    /* border-left: 4px solid #555555; */
-    background-color: #000;
-    padding: 5px 10px;
-    color: #fff;
+            margin: 0;
+            top: 58px;
+            position: fixed;
+            /* border-left: 4px solid #555555; */
+            background-color: #747474a8;
+            padding: 5px 10px;
+            color: #fff;
+            text-transform: capitalize;
+            font-weight: 300;
         }
 
         .product-card span {
-            text-transform: uppercase; 
+            text-transform: uppercase;
             font-size: 3rem;
             /* background: #00000099; */
             /* height: 30px; */
             display: block;
-            background-color: #ffffffb5;
+            background-color: #000000bf;
             /* bottom: 0; */
             /* right: 0; */
             position: relative;
             width: max-content;
             padding: 5px 10px;
-            color: #555555;
+            color: beige;
             position: absolute;
-            top: 54px;
-            border-left: 2px solid #000;
+            bottom: 54px;
+            /* border-right: 2px solid #000; */
             float: right;
-            font-weight: normal;
-            ;
+            font-weight: 100;
         }
 
         .highlight {
@@ -105,30 +106,30 @@
             z-index: 999;
             top: 50%;
             position: fixed;
-    z-index: 999;
-    top: 50%;
-    left: -2px;
-    content: '';
-    width: 40px;
-    height: 40px;
-    color: transparent;
-    border-radius: 0 40px 40px 0;
-    border: 0 none;
-    background: #0000007d;
+            z-index: 999;
+            top: 50%;
+            left: -2px;
+            content: '';
+            width: 40px;
+            height: 40px;
+            color: transparent;
+            border-radius: 0 40px 40px 0;
+            border: 0 none;
+            background: #0000007d;
         }
 
         button.slick-next.slick-arrow {
             position: fixed;
-    z-index: 999;
-    top: 50%;
-    right: -2px;
-    content: '';
-    width: 40px;
-    height: 40px;
-    color: transparent;
-    border-radius: 30px 0 0 30px;
-    border: 0 none;
-    background: #0000007d;
+            z-index: 999;
+            top: 50%;
+            right: -2px;
+            content: '';
+            width: 40px;
+            height: 40px;
+            color: transparent;
+            border-radius: 30px 0 0 30px;
+            border: 0 none;
+            background: #0000007d;
         }
 
         .slick-prev:before {
@@ -144,7 +145,7 @@
         }
 
         .filter {
-            background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;
+            background: rgba(0, 0, 0, 0.4) none repeat scroll 0% 0%;
             height: 100vh;
             margin: 0px;
         }
@@ -165,7 +166,7 @@
             $.getJSON('data.json', function (data) {
                 var productCards = '';
                 $.each(data, function (index, product) {
-                    var productCard = '<div lazy class="product-card" style="background-image: url(' + product.contentImage + ');">';
+                    var productCard = '<div lazy class="product-card" style="background-image: url(' + product.coverImage + ');">';
                     productCard += '<div class="filter"><h3>' + product.Title + '</h3>';
                     productCard += '<p>' + product.Location + '</p>';
                     productCard += '<span>' + product.Price + '</span>';
