--- a/slide-products.html
+++ b/slide-products.html
@@ -38,6 +38,7 @@
             /* background-size: 1600px !important; */
             max-width: 100%;
             text-transform: lowercase;
+            background-size: auto;
         }
 
         .product-card h3 {
